index.html change to stylesheet/main and stylesheet/shared

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       rel="stylesheet"
     />
     <!-- parced first -->
-    <link rel="stylesheet" href="/shared.css" />
+    <link rel="stylesheet" href="shared.css" />
     <!-- parced second -->
-    <link rel="stylesheet" href="/main.css" />
+    <link rel="stylesheet" href="main.css" />
     <title>Global Project Home</title>
   </head>
   <body>
