--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
           <a href="#" class="header--logo"> <div>GLOBAL</div></a>
           <nav class="header--nav">
             <a href="#">HOME</a>
-            <a href="../About/about.html">ABOUT</a>
-            <a href="../Services/services.html">SERVICES</a>
-            <a href="../Contact/contact.html">CONTACT</a>
+            <a href="/About/about.html">ABOUT</a>
+            <a href="/Services/services.html">SERVICES</a>
+            <a href="/Contact/contact.html">CONTACT</a>
           </nav>
           <nav class="hamburger--nav">
             <button type="button" class="hamburger--nav__toggle">
@@ -121,9 +121,9 @@
     <footer class="footer">
       <div class="footer--nav">
         <a href="#">Home</a>
-        <a href="./About/about.html">About</a>
-        <a href="./Services/services.html">Services</a>
-        <a href="./Contact/contact.html">Contact</a>
+        <a href="/About/about.html">About</a>
+        <a href="/Services/services.html">Services</a>
+        <a href="/Contact/contact.html">Contact</a>
       </div>
       <a href="#" class="footer--logo"> <div>GLOBAL</div></a>
       <div class="footer--copyright">&copy2022 Global. All rights reserved.</div>
