removed the forward slash in index.html on links

--- a/About/about.html
+++ b/About/about.html
@@ -20,9 +20,9 @@
       rel="stylesheet"
     />
     <!-- parced first -->
-    <link rel="stylesheet" href="./shared.css" />
+    <link rel="stylesheet" href="../shared.css" />
     <!-- parced second -->
-    <link rel="stylesheet" href="/about.css" />
+    <link rel="stylesheet" href="./about.css" />
     <title>Global Project About</title>
   </head>
   <body>
