--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
           <li>
             <a href="#">HOME</a>
           </li>
-          <li><a href="../About/about.html">ABOUT</a></li>
-          <li><a href="../Services/services.html">SERVICES</a></li>
-          <li><a href="../Contact/contact.html">CONTACT</a></li>
+          <li><a href="./About/about.html">ABOUT</a></li>
+          <li><a href="./Services/services.html">SERVICES</a></li>
+          <li><a href="./Contact/contact.html">CONTACT</a></li>
         </ul>
       </header>
       <!-- HOME HERO-->
